--- a/camera_ready/preamble.tex
+++ b/camera_ready/preamble.tex
@@ -18,6 +18,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{siunitx}
+\usepackage{xspace}
 
 % Custom environment
 \newtheorem{problem}{Problem}
@@ -32,6 +33,7 @@
 \newcommand{\todo}[1]{{\color{orange} \textbf{TODO:} #1}}
 
 % macros
+\newcommand{\tool}{\textsf{GMARA}\xspace}
 \newcommand{\Sol}{\mathit{Sol}}
 \newcommand{\Xh}{\widehat{X}}
 \newcommand{\xh}{\widehat{x}}
