--- a/camera_ready/preamble.tex
+++ b/camera_ready/preamble.tex
@@ -19,7 +19,7 @@
 \usepackage{subcaption}
 \usepackage{siunitx}
 \usepackage{xspace}
-
+\usepackage{pifont}
 % Custom environment
 \newtheorem{problem}{Problem}
 
