--- a/camera_ready/conclusion.tex
+++ b/camera_ready/conclusion.tex
@@ -9,7 +9,9 @@ We compute the reference trajectory for the product system using ALTRO. Our expe
 
 \smallskip
 \noindent\textbf{Comparison to other tools that are able to solve reach-avoid specifications.}\
-Our experiments show that our method is efficient in solving reach-avoid tasks for multi-agent systems. However, there are other tools which claim they can solve similar tasks. Table~\ref{tab:tools} lists main features for some of such active tools \MZ{that are public availble and we aware of them}.
+Our experiments show that \tool is efficient in solving reach-avoid tasks for multi-agent systems. However, there are other tools which claim they can solve similar tasks. Table~\ref{tab:tools} lists the main features of some of publicly available tools, which we aware of them.
+
+ the main features for some of such active tools \MZ{that are publicly availble and we aware of them}.
 \begin{table*}[t]
 	\large
 	\centering
