--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -62,7 +62,7 @@ The corresponding numbers will be reported in the next section.
 Notice that a higher number of input-state pairs does not necessarily result in a higher run time for local ABCD as the 
 number of transitions and features of the parallel implementation can play a role. 
 %
-We compare our approach with the ABCD applied to the product system to satisfy the global specification. 
+We compare \tool with the ABCD applied to the product system to satisfy the global specification. 
 As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD exceeds our system's limit (1.5TB of RAM) in all of the experiments.
 %
  %\MS{For reporting number of input-state pairs and run times of local ABCD we could report total, average or maximum values; currently, Tab.~\ref{tab:runtimes} contains maximum values (taken over all of the agents, corresponding to multi-machine implementation), while total and average values are reported in the body of the paper. Data will be unified once the decision is made.}
@@ -142,7 +142,7 @@ is as follows:
 %
 % Once the sets $\goal$ and $\avoid$ are obtained as above, we can use Alg.~\ref{alg:main} to find the set of feedback controllers $\set{C^i}$.
 %
-In this category of problems, we apply our approach to three case studies as discussed next.
+In this category of problems, we apply \tool to three case studies as discussed next.
 
 %\textcolor{red}{
 \subsubsection{Multi-drone path planning}\label{sec:Multirobot}
