added the author information

--- a/camera_ready/main.tex
+++ b/camera_ready/main.tex
@@ -13,6 +13,31 @@
 \title{Symbolic Reach-Avoid Control of Multi-Agent Systems}
 %\author{Mehrdad, Kaushik, Mahmoud, Rupak, Sadegh}
 
+\author{Rupak Majumdar} 
+\orcid{https://orcid.org/0000-0003-2136-0542}
+\affiliation{MPI-SWS, Germany.}
+ \email{rupak@mpi-sws.org} 
+ 
+ \author{Kaushik Mallik} 
+ \orcid{https://orcid.org/0000-0001-9864-7475} 
+ \affiliation{MPI-SWS, Germany.} 
+ \email{kmallik@mpi-sws.org} 
+
+ \author{Mahmoud Salamati} 
+ \orcid{} 
+ \affiliation{MPI-SWS, Germany.} 
+ \email{msalamati@mpi-sws.org} 
+ 
+ \author{Sadegh Soudjani} 
+ \orcid{https://orcid.org/0000-0003-1922-6678} 
+ \affiliation{Newcastle University, UK.} 
+ \email{sadegh.soudjani@ncl.ac.uk}
+ 
+  \author{Mehrdad Zareian} 
+ \orcid{} 
+ \affiliation{MPI-SWS, Germany.} 
+ \email{mzareian@mpi-sws.org} 
+
 \makeatletter
 % \@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
 \makeatother
