adding two reference descriptions

--- a/camera_ready/related_work.tex
+++ b/camera_ready/related_work.tex
@@ -15,10 +15,10 @@ Existing methods can be categorized based on the dynamics that they can handle (
 whether the system is subject to disturbances, considered class of specifications, and scalability. 
 A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and then use
 Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) or satisfiabiity modulo convex programming (SMC) methods to obtain a low-level controller ensuring a bounded error between the 
-two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust,sun2019,Nilsson:2018}. 
-\KM{Nothing has been stated about \cite{DBLP:journals/corr/abs-1911-09773,sun2019}.}
+two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust,Nilsson:2018}. 
+%\KM{Nothing has been stated about \cite{DBLP:journals/corr/abs-1911-09773,sun2019}.} 
 In contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require finding 
-a linear mapping between the low and high dimensional models. 
+a linear mapping between the low and high dimensional models. Meyer et al. considered reach-avoid problems for perturbed non-linear control affine systems \cite{DBLP:journals/corr/abs-1911-09773}. At first, they create a low-order system and use SOS programming to compute a controller ensuring a bounded error between the two systems. In the second step, they use abstraction-based controller design to compute a controller for the low-order system while taking the error into account. While their method can provide guarantee against worst-case disturbances, it is not clear if SOS programming always scales to the higher dimensions. 
 Nilsson et al.  proposed a method that decomposes the state space into a lower-order planning space, and a higher-order internal dynamics space, so that planning can be performed fast and accurate tracking can be achieved using a set of control barrier functions that are computed using SOS method \cite{Nilsson:2018}. Despite providing guarantees for the worst-case bounded disturbances, their method is not capable of solving reach-avoid tasks which involve dynamic obstacles as in the multi-agent case.
 %that governs the motion in planning space. 
 %The planning is performed fast since it is restricted to the lower-order space. To guarantee following of the planned trajectory in the lower-order space, control barrier functions are computed using SOS method. This method, however, cannot deal with dynamic obstacles as is needed in tackling collision avoidance.}
@@ -48,7 +48,8 @@ occasionally violate the safety constraints for finite number of time steps.
 Moreover, they only consider simple linear systems (double integrator) as vehicle models. 
 Nikou et al. studied the problem of robust navigation for multi-agent systems \cite{Nikou2019}. 
 %They consider additive bounded modelling disturbance. 
-They use optimal control to compute a reference trajectory for the nominal dynamics by neglecting disturbance, and invoke a  pre-computed feedback controller to guarantee that the perturbed system's trajectory remains within a bounded hyper-cube around the reference trajectory. In order to avoid collision with obstacles or other agents, their method relies on sensing capabilities of the agents. In contrast, our method does not requires any sensing ability in order to guarantee safe navigation of multi-agents.
+They use optimal control to compute a reference trajectory for the nominal dynamics by neglecting disturbance, and invoke a  pre-computed feedback controller to guarantee that the perturbed system's trajectory remains within a bounded hyper-cube around the reference trajectory. In order to avoid collision with obstacles or other agents, their method relies on sensing capabilities of the agents. In contrast, our method does not requires any sensing ability in order to guarantee safe navigation of multi-agents. Sun et al. considered the problem of robust motion planning of multi-agent systems for LTL specifications, under the presence of bounded-additive disturbance and denial of service attacks against the communications between the robots and the base stations \cite{sun2019}. First, they compute a feedback controller that forces the system's trajectories to remain within a robust control invariant set under the worst-case disturbance scenario. For piecewise-affine systems, there exist effective algorithms for computing the feedback controller and the corresponding invariant set. Next, they use SMC programming methods to compute a feasible nominal trajectory together with an open-loop controller, and by adding up the nominal
+open-loop control input and the feedback control law they construct the final control input. Despite being able to provide guarantees against the worst-case disturbances, the required time to tackle higher-dimensional reach-avoid problems increases significantly, since their implementation is centralized.%The main drawback of their method is central implementation, since tackling reach-avoid problems in higher dimensions takes significantly longer time.
  %However, they assume that agents are able to communicate while moving; and their target is to satisfy input-to-state stability. In fact, their method is not able to tackle collision avoidance for static/dynamic obstacles.}
 
 There are other works that use a pre-defined motion primitive library to perform planning for multi-robot 
