--- a/camera_ready/main.tex
+++ b/camera_ready/main.tex
@@ -24,7 +24,7 @@
  \email{kmallik@mpi-sws.org} 
 
  \author{Mahmoud Salamati} 
- \orcid{} 
+ \orcid{https://orcid.org/0000-0003-3790-3935} 
  \affiliation{MPI-SWS, Germany.} 
  \email{msalamati@mpi-sws.org} 
  
