moved the experiments to the appendix section

--- a/camera_ready/preamble.tex
+++ b/camera_ready/preamble.tex
@@ -1,8 +1,8 @@
 % packages
+\usepackage{xcolor}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 %\usepackage{amssymb}
-\usepackage{xcolor}
 \usepackage{enumerate}
 \usepackage{amsthm}
 %\usepackage{enumitem}
@@ -22,6 +22,7 @@
 \usepackage{pifont}
 % Custom environment
 \newtheorem{problem}{Problem}
+\usepackage{wrapfig}
 
 % comment macros
 \newcommand{\Sadegh}[1]{{\color{magenta} \textbf{SS:} #1}}
