--- a/camera_ready/theory.tex
+++ b/camera_ready/theory.tex
@@ -270,7 +270,7 @@ Our decentralized controller synthesis approach features an interplay between th
 
 
 \subsection{Hybrid vs Geometric Planning}
-
+	
 Note that Step~\ref{step:tracking} of Alg.~\ref{alg:main} does not use the nominal controller obtained in Step~\ref{step:planning} and requires only the nominal trajectories.
 Then one could argue that, instead of using ALTRO to generate nominal trajectories, a fast \emph{geometric planner} \cite{Kavraki1996rrt} can be employed to generate geometric plans.
 However, fast geometric planners do not usually take into consideration the dynamics and control constraints. In our experience, the plans for nominal trajectories generated while ignoring the system dynamics are often untrackable unless the underlying system has special properties (e.g., differential flatness \cite{Murray95differentialflatness}).
@@ -281,14 +281,15 @@ We demonstrate this phenomenon on a control system $\Sigma$ that is a simple $2$
 		\dot{x}_2 = -\sin(x_1) + u/5,
 	\end{align*}
 where $x_1$ represents the angle (in Radian) of the pendulum rod measured counter-clockwise from the vertical upright position, and $x_2$ represents the rate of change of $x_1$ or the angular velocity.
+\begin{wrapfigure}{r}{0.2\textwidth}
+		\includegraphics[width=0.2\textwidth]{figures/inverted_pendulum_plot2.eps}
+		\caption{The nominal trajectory (the blue spiral) for the inverted pendulum, the initial state is the red point, and the final state is the yellow point. \KM{Mehrdad: can you increase the fontsize so that they can be read even when we make the figure small?}} %\Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
+		\label{fig:traj 2d pendulum}
+	\end{wrapfigure}
 Suppose the initial state of the pendulum is $(\pi,0)$, i.e., when the pendulum is in the vertical downward position and is stationary.
 Suppose we want to find a controller for the goal $\goal = \set{(0,0)}$, i.e., when the pendulum is in the vertical upward position and is stationary.
 The set of unsafe states $\avoid$ is empty, i.e., no safety constraint is imposed.
 When we use ALTRO to compute an open-loop controller $C$, unsurprisingly, the controlled trajectory of $C\triangleright \Sigma$ looks like a spiral, as shown in Fig.~\ref{fig:traj 2d pendulum}.
 The synthesis of tracking controller using ABCD is indeed successful when we feed this nominal trajectory to our ABCD solver.
 However, if we use a geometric planner for this example that ignores the dynamics, the nominal trajectory would be a straight line path from $(\pi,0)$ to $(0,0)$, which gives an infeasible tracking problem for ABCD, due to the restrictions on possible trajectories of the pendulum coming from the its dynamics.
-	\begin{figure}
-		\includegraphics[width=0.45\textwidth]{figures/inverted_pendulum_plot2.eps}
-		\caption{The nominal trajectory for the inverted pendulum.} %\Sadegh{Text inside the figure is very small, make it larger so that it is readable.}}
-		\label{fig:traj 2d pendulum}
-	\end{figure}
+	
