--- a/camera_ready/main.tex
+++ b/camera_ready/main.tex
@@ -1,8 +1,8 @@
-\documentclass[sigconf,review]{acmart} 
-\settopmatter{printacmref=false} % Removes citation information below abstract
-\renewcommand\footnotetextcopyrightpermission[1]{} % removes footnote with conference information in first column
+\documentclass[sigconf,table]{acmart} 
+%\settopmatter{printacmref=false} % Removes citation information below abstract
+%\renewcommand\footnotetextcopyrightpermission[1]{} % removes footnote with conference information in first column
 % \pagestyle{plain} % removes running headers
-\fancyfoot{} % for removing "manuscript submitted to ACM" running footer
+%\fancyfoot{} % for removing "manuscript submitted to ACM" running footer
 
 %\bibliographystyle{plainurl}
 
@@ -63,6 +63,8 @@
 \bibliographystyle{plain}
 \bibliography{references}
 
-
+\begin{appendix}
+\input{appendix}
+\end{appendix}
 
 \end{document}
